My_first_page.html

--- a/My_first_page.html
+++ b/My_first_page.html
@@ -14,6 +14,12 @@
 <li>To show off</li>
 <li>Because I've fallen in love with my computer and want to give her some HTML loving.</li>
 </ol>
+<ul>
+        <li>To my boss</li>
+        <li>To my friends</li>
+        <li>To my cat</li>
+        <li>To the little talking duck in my brain</li>
+    </ul>
 <br>
  How exciting</>
 </body>
