My_first_page.html

--- a/My_first_page.html
+++ b/My_first_page.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta churset="UTF-8">
 <title>My first web page</title>
 </head>
 <body>
-    <h1>This is <strong>my</strong> first web page</h1>
+    <h1>This is my first web page</h1>
 <h2>What this is</h2>
-<p>A simple page put <em>together</em> using HTML</p>
+<p>A simple page put together using HTML</p>
 <h2>Why this is</h2>
 <p>To learn HTML</p>
 <ol>
 <li>To learn HTML</li>
 <li>To show off</li>
-<li>Because I've fallen in love with my computer and want to give her some HTML loving.</li>
+<li>Because I've fallen in love with 
+    my computer and want to give her some HTML loving.</li>
 </ol>
 <ul>
         <li>To my boss</li>
         <li>To my friends</li>
         <li>To my cat</li>
-        <li>To the little talking duck in my brain</li>
+        <li>To the little talking duck in my brain</li> 
+        <li>Because I've fallen in love with 
+            my computer and want to give her 
+            some HTML loving.</li>
     </ul>
+   <h2>Where to find the tutorial</h2>
+   <p>
+       <a href="http://www.htmldog.com">HTML Dog</a>
+       <br>
+     <img src="/home/yelizaveta/Desktop/html/photo/index.jpeg">
+   </p>
+  <form>
+      <input type="text" name="username">
+      <input type="password">
+      <input type="submit" value="log in">
+  </form>
 <br>
- How exciting</>
+ How exciting
 </body>
 </html>
