My_first_page.html

--- a/My_first_page.html
+++ b/My_first_page.html
@@ -29,7 +29,7 @@
    <p>
        <a href="http://www.htmldog.com">HTML Dog</a>
        <br>
-     <img src="/home/yelizaveta/Desktop/html/photo/index.jpeg">
+     <img src="/home/yelizaveta/Desktop/html/photo/59727227_2048297218629168_3553459299927719936_n.jpg" width="135.25" height="240">
    </p>
   <form>
       <input type="text" name="username">
