--- a/My_first_page.html
+++ b/My_first_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta churset="UTF-8">
+    <meta charset="UTF-8">
 <title>My first web page</title>
 </head>
 <body>
@@ -31,10 +31,9 @@
        <br>
      <img src="/home/yelizaveta/Desktop/html/photo/59727227_2048297218629168_3553459299927719936_n.jpg" width="135.25" height="240">
    </p>
-  <form>
+  <form action="get.html" method="GET">
       <input type="text" name="username">
-      <input type="password">
-      <input type="submit" value="log in">
+           <input type="submit" value="log in">
   </form>
 <br>
  How exciting
