My_first_page.html

--- a/My_first_page.html
+++ b/My_first_page.html
@@ -29,12 +29,31 @@
    <p>
        <a href="http://www.htmldog.com">HTML Dog</a>
        <br>
+       <h3>This is ME</h3>
      <img src="/home/yelizaveta/Desktop/html/photo/59727227_2048297218629168_3553459299927719936_n.jpg" width="135.25" height="240">
    </p>
-  <form action="get.html" method="GET">
-      <input type="text" name="username">
+   <p><h3>My Forms on web</h3></p>
+  <form action="get.html" method="GET" autocomplete="on">
+      <input type="text" name="username" value="username">
+<p><input type="password" name="password" value="password" autocomplete="off"></p>
            <input type="submit" value="log in">
-  </form>
+           <p>Try this</p>
+           <p>
+               <input type="radio" name="trythis" value="married">Married</p>
+            <p><input type="radio" name="trythis" value="single">Single</p>  
+        <p><input type="button" name="submit" value="DONE"></p>
+        <select>
+            <option>Option 1</option>
+            <option>Option 2</option>
+            <option value="third option">Option 3</option>
+        </select>
+        <p><input type="button" value="DONE"></p>
+        <p>
+            <textarea rows="2" cols="1">Type here</textarea> </p>
+            <p><input type="submit" name="submit" value="ok"></p> 
+       <p>1<input type="checkbox" value="1" name="1"></p>
+       <p><input type="checkbox" value="1" name="2">2</p>
+        </form>
 <br>
  How exciting
 </body>
